examples/test/testpolicy7702.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy7702
  namespace: namespace214
spec:
  podSelector:
    matchLabels:
      key48: value44
      key36: value16
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key0: value15
          key44: value24
          key48: value42
      podSelector:
        matchLabels:
          key0: value49
